--- a/projeto_fds/mercado/templates/home_fornecedor.html
+++ b/projeto_fds/mercado/templates/home_fornecedor.html
@@ -23,10 +23,10 @@
         background-image: url('/static/images/img-home-empresario.png');
         background-size: cover;
         background-position: center;
-        padding: 100px 20px;
-        color: var(--branco-principal);
+        padding: 20px 20px;
+        color: black;
         text-align: center;
-        min-height: 400px;
+        min-height: 40px;
     }
 
     .hero::before {
@@ -44,7 +44,7 @@
     }
 
     .hero-content {
-        color: var(--branco-principal);
+        color: black;
         position: relative;
         z-index: 2;
     }
@@ -91,7 +91,6 @@
         <p>Gerencie seus produtos e vendas</p>
     </div>
 </section>
-
 <div class="container">
     {% if user.is_authenticated %}
     <div class="section-title">Ações Rápidas</div>
