--- a/projeto_fds/mercado/templates/historico_vendas.html
+++ b/projeto_fds/mercado/templates/historico_vendas.html
@@ -3,18 +3,28 @@
 <h2>Histórico de Vendas</h2>
 
 {% if vendas %}
-    <ul>
-        {% for venda in vendas %}
-            <li>
-                <strong>Data da venda:</strong> {{ venda.data_venda }}<br>
-                <strong>Quantidade:</strong> {{ venda.quantidade }}<br>
-                <strong>Produtos:</strong>
-                <ul>
-                    <li>{{ venda.produto.nome }} - R$ {{ venda.produto.preco }}</li>
-                </ul>
-            </li>
-        {% endfor %}
-    </ul>
+    {% for venda in vendas %}
+        <h3>Data da venda: {{ venda.data_venda|date:"d 'de' F 'de' Y 'às' H:i" }}</h3>
+        
+        <table border="1" cellpadding="10" cellspacing="0" style="width: 100%; margin-bottom: 20px;">
+            <thead>
+                <tr>
+                    <th>Nome do Produto</th>
+                    <th>Preço</th>
+                    <th>Quantidade</th>
+                    <th>Total</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>{{ venda.produto.nome_produto }}</td>
+                    <td>R$ {{ venda.produto.preco }}</td>
+                    <td>{{ venda.quantidade }}</td>
+                    <td>R$ {{ venda.produto.preco|floatformat:2|add:venda.quantidade|floatformat:2 }}</td>
+                </tr>
+            </tbody>
+        </table>
+    {% endfor %}
 {% else %}
     <p>Você ainda não fez nenhuma venda.</p>
 {% endif %}
